--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,12 @@
         ],
         "no-console": [
             "off"
+        ],
+        "no-prototype-builtins": [
+            "off"
         ]
-    }
+    },
+    "globals": {
+        "Handlebars": true
+      }
 }
